@@ -2,6 +2,8 @@ git-annex (6.20160319) UNRELEASED; urgency=medium
 
   * adjust --unlock: Enters an adjusted branch in which all annexed files
     are unlocked. The v6 equivilant of direct mode, but much cleaner!
+  * init --version=6: Automatically enter the adjusted unlocked branch
+    when filesystem doesn't support symlinks.
   * ddar remote: fix ssh calls
     Thanks, Robie Basak
 
